Adicionado o envio de email

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,6 +34,9 @@
               <li class="nav-item" data-turbolinks="false">
                 <a href="/calendar" class="nav-link{{#if active.calendar}} active{{/if}}">Calendar</a>
               </li>
+              <li class="nav-item" data-turbolinks="false">
+                <a href="/email" class="nav-link{{#if active.email}} active{{/if}}">Email</a>
+              </li>
             {{/if}}
           </ul>
           <ul class="navbar-nav justify-content-end">
