--- a/views/email.hbs
+++ b/views/email.hbs
@@ -2,23 +2,29 @@
      Licensed under the MIT License. -->
 
 <!-- <LayoutSnippet> -->
-<h1>Calendar</h1>
+<form action="/email" method="POST">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+<h1>Email</h1>
 <table class="table">
   <thead>
     <tr>
-      <th scope="col">Organizer</th>
       <th scope="col">Subject</th>
-      <th scope="col">Start</th>
-      <th scope="col">End</th>
+      <th scope="col">From</th>
+      <th scope="col">To</th>
     </tr>
   </thead>
   <tbody>
-    {{#each events}}
+    {{#each emails}}
       <tr>
-        <td>{{this.organizer.emailAddress.name}}</td>
         <td>{{this.subject}}</td>
-        <td>{{eventDateTime this.start.dateTime}}</td>
-        <td>{{eventDateTime this.end.dateTime}}</td>
+        <td>{{this.sender.emailAddress.address}}</td>
+        <td>{{this.toRecipients.emailAddress.address}}</td>
       </tr>
     {{/each}}
   </tbody>
